<resources>
    <string name="app_name">libsuperplayer</string>
    <string name="anthology">选集</string>
    <string name="free_ad1">会员免广告</string>
    <string name="open_vip_tip">开通VIP会员免费看</string>
    <string name="if_is_vip">如您已是会员，请登录</string>
    <string name="login">登录</string>
    <string name="login_vip_tip">登录/开通VIP会员</string>
    <string name="more1">更多</string>
    <string name="titletail">片头片尾</string>
    <string name="jump">跳过</string>
    <string name="no_jump">不跳过</string>
    <string name="quality1">流畅</string>
    <string name="quality2">标清</string>
    <string name="quality3">高清</string>
    <string name="quality4">全高清</string>
    <string name="voice">声音</string>
    <string name="light">亮度</string>
    <string name="speed_play">多倍速播放</string>
    <string name="mirror">镜像</string>
    <string name="hardware_speed">硬件加速</string>
    <string name="download">下载</string>
    <string name="quality">画质</string>
    <string name="picture_scale">画面比例</string>
    <string name="original_scale">原始比例</string>
    <string name="full_screen">全屏</string>
    <string name="tv_ad">广告</string>
    <string name="living">直播</string>
    <string name="living_shift">回看</string>
    <string name="buy_antholgy">购&#160;买&#160;本&#160;内&#160;容</string>
    <string name="buy_antholgy1">购&#160;买&#160;内&#160;容</string>
    <string name="buy_antholgy_tip">试看结束，应版权要求，需购买才能看完整版</string>
    <string name="_1080p">蓝光1080p</string>
    <string name="_720p">超清720p</string>
    <string name="_480p">高清480p</string>
    <string name="_270p">标清270p</string>
    <string name="_180p">流畅</string>
</resources>
