<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FFFFFF"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/open_vip_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_vip_tip"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/open_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/vip_login_tip"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="166dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/login_vip_tip"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/if_is_vip"
        android:textSize="11sp" />
</LinearLayout>