<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titletail"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/jump"
                style="@style/RadioButton_no"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/full_bottom_radio_bg_select"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/jump"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/no_jump"
                style="@style/RadioButton_no"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:background="@drawable/full_bottom_radio_bg_select"
                android:button="@null"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/no_jump"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_scale"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/original_scale"
                style="@style/RadioButton_no"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:background="@drawable/full_bottom_radio_bg_select"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/original_scale"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/full_screen"
                android:layout_width="105dp"
                style="@style/RadioButton_no"
                android:layout_height="wrap_content"
                android:background="@drawable/full_bottom_radio_bg_select"
                android:button="@null"
                android:gravity="center"
                android:text="@string/full_screen"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>