<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buy_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/buy_antholgy_tip"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/to_buy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:background="@drawable/buy_antholgy_bg1"
            android:gravity="center"
            android:text="@string/buy_antholgy"
            android:textColor="#FBFBFA"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/to_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buy_antholgy_bg"
        android:gravity="center"
        android:text="@string/buy_antholgy1"
        android:textColor="#FBFBFA"
        android:textSize="12sp" />

</FrameLayout>
