<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/videoType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="44dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/full_layout_bottom"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_above="@id/layout_bottom"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/tv_anthology"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="70dp"
            android:background="@drawable/full_bottom_radio_bg_select"
            android:button="@null"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="60dp"
            android:text="@string/anthology"
            android:textColor="#E5E5E5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/tv_quality"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="70dp"
            android:background="@drawable/full_bottom_radio_bg_select"
            android:button="@null"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="60dp"
            android:text="@string/quality"
            android:textColor="#E5E5E5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="70dp"
            android:background="@drawable/full_bottom_radio_bg_select"
            android:button="@null"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="60dp"
            android:text="@string/more1"
            android:textColor="#E5E5E5"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/normal_layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <ImageView
                android:id="@+id/iv_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_vod_pause_normal" />
            <!--播放位置-->
            <TextView
                android:id="@+id/tv_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:text="00:00"
                android:textColor="@android:color/white"
                android:textSize="11.0sp" />


            <com.tencent.liteav.demo.play.view.TCPointSeekBar
                android:id="@+id/seekbar_progress"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_weight="1.0"
                app:psb_backgroundColor="#C6CBCB"
                app:psb_max="100"
                app:psb_progress="0"
                app:psb_progressColor="#378BD3"
                app:psb_progressHeight="1dp"
                app:psb_thumbBackground="@drawable/ic_vod_thumb" />


            <!--总时长-->
            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="00:00"
                android:textColor="@android:color/white"
                android:textSize="11.0sp" />

            <RadioButton
                android:id="@+id/tv_quality1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="70dp"
                android:background="@drawable/full_bottom_radio_bg_select"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="60dp"
                android:text="@string/quality"
                android:textColor="#E5E5E5"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/large_tv_vtt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_bottom"
        android:layout_marginBottom="2dp"
        android:background="@drawable/shape_vtt_text_bg"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

    <com.tencent.liteav.demo.play.view.TCVodQualityView
        android:id="@+id/vodQualityView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/full_layout_bottom"
        android:visibility="gone" />

    <com.tencent.liteav.demo.play.view.TCVodSettingMoreView
        android:id="@+id/settingMoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/full_layout_bottom"
        android:layout_marginStart="48dp"
        android:visibility="gone" />


    <com.tencent.liteav.demo.play.view.TCVodAnthologyView
        android:id="@+id/anthologyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/full_layout_bottom"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_replay" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_backToLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_round_bg"
        android:text="返回直播"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.tencent.liteav.demo.play.view.TCVolumeBrightnessProgressLayout
        android:id="@+id/gesture_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" />


    <com.tencent.liteav.demo.play.view.TCVideoProgressLayout
        android:id="@+id/video_progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" />


    <ImageView
        android:id="@+id/large_iv_water_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.tencent.liteav.demo.play.view.PauseAdView
        android:id="@+id/pause_ad_view"
        android:layout_width="591dp"
        android:layout_height="370dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:focusable="true"
        android:visibility="gone" />
</RelativeLayout>